'完成创建任务和搜索抽查任务两个场景的用例实现'

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea/*
 __pycache__/*
 pageobjects/__pycache__/*
-testcases/__pycache__/*
-pageobjects/components/__pycache__/*
+testsuites/__pycache__/*
+components/__pycache__/*
