--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,6 +1,6 @@
 [common]
 browser = chrome
-url = http://192.168.4.167/admin
+hostname = http://192.168.4.167
 username = 陈亮棠
 password = abc123456
 
@@ -9,7 +9,9 @@ password = abc123456
 welcome_login_xpath = //*[@id="app"]/div/div/div[2]/p
 username_xpath = //*[@id="login-form"]/div[1]/input
 password_xpath = //*[@id="login-form"]/div[2]/input
-login_btn_xpath = //*[@id="app"]/div/div/div[2]/div/button
+username_check_mark_xpath = //*[@id="login-form"]/div[1]/div[2]
+password_check_mark_xpath = //*[@id="login-form"]/div[2]/div[2]
+login_btn_xpath = //*[@class="submit ivu-btn ivu-btn-primary ivu-btn-long"]
 
 
 [logout]
@@ -19,45 +21,137 @@ logout_xpath = //*[@id="app"]/div/div[1]/div/div[2]/div/div/div[2]/ul/li[2]
 
 [homepage]
 #切换子系统按钮
-main_menu_xpath = //*[@id="app"]/div/div[2]/div[1]/div/div[1]/div/div[1]/i
+main_menu_xpath = //*[@class="ivu-icon iconfont icon-A-baisex"]
 #双随机系统切换按钮
-random_system_btn_xpath = //*[@id="app"]/div/div[2]/div[1]/section/div/div[2]/div[2]/div[2]/div/ul/li[2]/span[1]
+sc_application_xpath = //*[@class="home-applications-content"]/descendant::span[text()="宝安双随机项目"]
+#双随机系统勾选按钮
+sc_application_select_xpath = //*[@class="home-applications-content"]/descendant::span[text()="宝安双随机项目"]/following-sibling::span
+#子系统选择关闭按钮
+close_applications_xpath = //*[@class="ivu-icon ivu-icon-md-close"]
 #双随机项目界面
-main_system_title_xpath = //*[@id="app"]/div/div[2]/div[2]/div[1]/div[1]/div[1]/div/span
+main_system_title_xpath = //*[@class="application-label"]/span
 
 
 #抽查任务管理模块
 [task_management]
+#输入编号
+task_code_xpath = //*[@id="app"]/div/div[2]/input
+#事项类别
+item_category_xpath = //*[@class="category-sel ant-select ant-select-enabled ant-select-allow-clear"]
+#事项类别的下拉列表
+dropdown_menu_xpath = //*[@class="ant-select-dropdown-content"]/descendant::li[contains(text(), "防洪排涝和排水类")]
+#搜索按钮
+search_btn_xpath = //*[@id="app"]/div/div[2]/button[1]
+#全部
+all_status_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[1]
+#待发布
+to_be_published_status_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[2]
+#待检查
+to_be_checked_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[3]
+#检查中
+checking_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[4]
+#已检查
+checked_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[5]
+#已超时
+timeout_xpath = //*[@class="ant-radio-group ant-radio-group-solid ant-radio-group-default"]/label[6]
+
+table_fields_xpath = //*[@class="ant-table-thead"]/tr/child::th
+#重置按钮
+reset_btn_xpath = //*[@id="app"]/div/div[2]/button[2]
+#暂无数据
+no_data_xpath = //*[@class="ant-table-placeholder"]
+#总共条数
+total_numbers_xpath = //*[@class="ant-pagination-total-text"]
+#分页数目
+paging_xpath = //*[@class="ant-pagination ant-table-pagination"]/child::li
+
 #创建时间
 create_time_xpath = //*[@id="app"]/div/div[2]/span[3]/span
 #创建时间-开始时间-月份
-create_time_start_mouth_xpath = //div[1]/div[1]/div[2]/div[1]/div/span/a[2]
+create_time_start_month_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-left"]/descendant::a[@class="ant-calendar-month-select"]
 #创建时间-结束时间-月份
-create_time_end_mouth_xpath = //div[1]/div[2]/div[2]/div[1]/div/span/a[2]
+create_time_end_month_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-right"]/descendant::a[@class="ant-calendar-month-select"]
 #创建时间-开始时间-年份
 create_time_start_year_xpath = //div[1]/div[2]/div[2]/div[1]/div/span/a[1]
 #创建时间-结束时间-年份
 create_time_end_year_xpath = //div[1]/div[2]/div[2]/div[1]/div/span/a[1]
 #创建时间-开始时间-月份-选择表格
-create_time_start_mouth_table_xpath = //div[1]/div[1]/div[2]/div[1]/div[2]/div/div[2]/table/tbody/tr[1]/td[1]
+create_time_start_month_table_xpath = //*[@class="ant-calendar-month-panel-body"]/descendant::tbody/tr[1]/td[1]
 #创建时间-结束时间-月份-选择表格
-create_time_end_mouth_table_xpath = //div[1]/div[2]/div[2]/div[1]/div[2]/div/div[2]/table/tbody/tr[1]/td[1]
+create_time_end_month_table_xpath = //*[@class="ant-calendar-month-panel-body"]/descendant::tbody/tr[1]/td[1]
 #创建时间-开始时间
-create_time_start_day_xpath = //div[1]/div[1]/div[2]/div[2]/table/tbody/tr[2]/td[1]
+create_time_start_day_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-left"]/descendant::tbody/tr[1]/td[1]
 #创建时间-结束时间
-create_time_end_day_xpath = //div[1]/div[2]/div[2]/div[2]/table/tbody/tr[2]/td[1]
+create_time_end_day_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-right"]/descendant::tbody/tr[1]/td[1]
 #起止时间
 end_time_xpath = //*[@id="app"]/div/div[2]/span[5]/span
 #起止时间-开始时间-月份
-end_time_start_mouth_xpath = //div[1]/div[1]/div[2]/div[1]/div/span/a[2]
+end_time_start_month_xpath = //div[1]/div[1]/div[2]/div[1]/div/span/a[2]
 #起止时间-开始时间-月份-选择表格
-end_time_start_mouth_table_xpath = //div[1]/div[1]/div[2]/div[1]/div[2]/div/div[2]/table/tbody/tr[1]/td[1]
-
+end_time_start_month_table_xpath = //*[@class="ant-calendar-month-panel-body"]/descendant::tbody/tr[1]/td[1]
 #起止时间-开始时间
-end_time_start_day_xpath = //div[1]/div[1]/div[2]/div[2]/table/tbody/tr[2]/td[3]
+end_time_start_day_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-left"]/descendant::tbody/tr[1]/td[1]
 #起止时间-结束时间-月份
-end_time_end_mouth_xpath = //div[1]/div[2]/div[2]/div[1]/div/span/a[2]
+end_time_end_month_xpath = //div[1]/div[2]/div[2]/div[1]/div/span/a[2]
 #起止时间-结束时间-月份-选择表格
-end_time_end_mouth_table_xpath = //div[1]/div[2]/div[2]/div[1]/div[2]/div/div[2]/table/tbody/tr[2]/td[2]
+end_time_end_month_table_xpath = //*[@class="ant-calendar-month-panel-body"]/descendant::tbody/tr[1]/td[1]
 #起止时间-结束时间
-end_time_end_day_xpath = //div[1]/div[2]/div[2]/div[2]/table/tbody/tr[1]/td[3]
+end_time_end_day_xpath = //*[@class="ant-calendar-range-part ant-calendar-range-right"]/descendant::tbody/tr[1]/td[1]
+#抽查任务表单内容
+sc_task_tbody_xpath = //*[@class="ant-table-tbody"]/child::tr
+#抽查任务表单每行内容
+sc_task_tbody_td_xpath = //*[@class="ant-table-tbody"]/tr[1]/child::td
+#任务编号
+sc_task_code_xpath = //*[@key = "taskcode"]/div
+#抽查任务表单第一行的最后一列
+sc_task_first_record_delete_btn_xpath = //*[@class = "ant-table-tbody"]/tr[1]/descendant :: div[text() = "删除"]
+#抽查任务表单第一行的第二列
+sc_task_first_record_task_code_xpath = //*[@class = "ant-table-tbody"]/tr[1]/td[2]
+#抽查任务表单总共条数
+sc_task_total_text_xpath = //*[@class="ant-pagination-total-text"]
+#抽查任务下一页
+sc_task_next_page_xpath = //*[@class="anticon anticon-right"]
+
+#创建任务
+create_task_xpath = //*[@id="app"]/div/div[1]/div[2]/button[2]
+#抽查对象 > 抽查事项
+sc_items_xpath = //*[@id="mattercategoryID"]/div/div
+#抽查对象 > 抽查事项下拉选项
+sc_items_dropdown_xpath = //*[@id="mattercategoryID"]/parent::*/descendant::ul/li[text()="测试类别"]
+#抽查对象 > 抽查区域
+sc_area_xpath = //*[@class="area-box"]/div/div
+#抽查对象 > 抽查区域下拉选项
+sc_area_dropdown_xpath = //*[@class="area-box"]/div[2]/descendant::ul/li[1]
+#抽查对象 > 输入对象数量
+sc_items_input_xpath = //*[@placeholder="请输入对象数量"]
+#抽查对象 > 抽查科室
+sc_departments_xpath = //*[@id="ksList"]
+#抽查对象 > 抽查科室关闭按钮
+sc_departments_close_xpath = //*[@id="ksList"]/descendant::i[@class="ant-select-remove-icon anticon anticon-close"]
+#抽查对象 > 抽查科室下拉选项
+sc_departments_dropdown_xpath = //*[@id="ksList"]/parent::*/div[2]/descendant::ul/li[1]
+#抽查对象 > 科室抽取人数
+sc_departments_numbers_xpath = //*[@id="KS-ALL"]
+#抽查对象 > 抽查中队
+sc_detachment_xpath = //*[@id="XZZD"]/div/div
+#抽查对象 > 抽查中队下拉选项
+sc_detachment_dropdown_xpath = //*[@id="XZZD"]/parent::*/div[2]/descendant::ul/li[1]
+#抽查对象 > 中队抽取人数
+sc_detachment_numbers_xpath = //*[@id="ZD-ALL"]
+#抽查频次
+sc_frequency_xpath = //*[@id="monuth"]/div/div
+#抽查频次下拉列表
+sc_frequency_dropdown_xpath = //*[@id="monuth"]/parent::*/div[2]/descendant::ul/li[1]
+#抽查时段
+sc_time_interval_xpath = //*[@id="timeinterval"]/div/div
+#抽查时段下拉列表
+sc_time_interval_dropdown_xpath = //*[@id="timeinterval"]/parent::*/div[2]/descendant::ul/li[1]
+#起止时间
+sc_start_to_end_time_xpath = //*[@id="datePicker"]/span/input[1]
+#任务分组
+sc_task_group_xpath = //*[@class="ant-input ant-input-lg"  and  not(@placeholder)]
+#发布任务
+sc_publish_task_xpath = //*[@class="btns"]/button[3]
+#确认发布任务/确认删除
+sc_task_confirm_btn_xpath =//*[@class="ant-modal-confirm-btns"]/button[@class="ant-btn ant-btn-primary"]
+#sc_task_confirm_btn_xpath =//*[@class="ant-modal-confirm-btns"]/descendant::span[text()="确 定"]
