增加日志打印，并实现循环播放文稿

--- a/config.ini
+++ b/config.ini
@@ -19,4 +19,7 @@ nav_content_xpath = //*[@class="nav-ct"]
 start_xpath = //*[@class="start"]
 pre_xpath = //*[@class="pre"]
 next_xpath = //*[@class="next"]
-
+preview_xpath = //*[@class="img"]/img
+nav_list_ct_xpath = //*[@class="name"]
+start_title_xpath = //*/header[contains(text(), "文稿预览")]
+play_title_xpath = //*/span[contains(text(), "文稿播放")]
