--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [common]
 browser = chrome
-url = http://192.168.2.55:8666
+url = http://intranet.cityworks.cn:88/city-viewer-control/
 username = test
 password = test
 
@@ -19,6 +19,7 @@ nav_content_xpath = //*[@class="nav-ct"]
 start_xpath = //*[@class="start"]
 pre_xpath = //*[@class="pre"]
 next_xpath = //*[@class="next"]
+pre_next_text_xpath = //*[@class="text"]
 preview_xpath = //*[@class="img"]/img
 nav_list_ct_xpath = //*[@class="name"]
 start_title_xpath = //*/header[contains(text(), "文稿预览")]
