循环跑文稿

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [common]
 browser = chrome
-url = http://intranet.cityworks.cn:88/city-viewer-control/
-# url = http://10.99.85.174:8666
+# url = http://intranet.cityworks.cn:88/city-viewer-control/
+url = http://10.99.85.174:8666
 username = test
 password = test
 
