兼容v1.1.1版本的多屏幕

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [common]
 browser = chrome
-# url = http://intranet.cityworks.cn:88/city-viewer-control/
+# 分别是登陆的地址/yong'hu
 url = http://10.99.85.174:8666
 username = test
 password = test
@@ -16,6 +16,9 @@ exit_play_xpath = //*[@class="el-icon-arrow-left"]
 logout_xpath = //*[@class="personal-text"]
 
 [homepage]
+change_screen_xpath = //*[@class="el-dropdown-link el-dropdown-selfdefine"]
+select_screen_xpath = //*/li[contains(text(), "宝安中心大屏")]
+select_screen_confirm_xpath = //*/span[contains(text(), "确定")]
 nav_content_xpath = //*[@class="nav-ct"]
 start_xpath = //*[@class="start"]
 pre_xpath = //*[@class="pre"]
@@ -23,5 +26,5 @@ next_xpath = //*[@class="next"]
 pre_next_text_xpath = //*[@class="text"]
 preview_xpath = //*[@class="img"]/img
 nav_list_ct_xpath = //*[@class="name"]
-start_title_xpath = //*/header[contains(text(), "文稿预览")]
+start_title_xpath = //*/span[contains(text(), "文稿预览")]
 play_title_xpath = //*/span[contains(text(), "文稿播放")]
