--- a/config.ini
+++ b/config.ini
@@ -1,30 +1,37 @@
+# 该文件主要是用于定位页面元素的
 [common]
 browser = chrome
-# 分别是登陆的地址/yong'hu
+# 分别是登陆的地址、用户名和密码
 url = http://10.99.85.174:8666
 username = test
 password = test
 
-
 [login]
+# 分别是登录页面中用户名、密码和确认按钮的定位
 username_xpath = //*[@id="username"]
 password_xpath = //*[@id="password"]
 login_btn_xpath = //*[@type="submit"]
 
 [logout]
+# 分别退出播放按钮和登出定位
 exit_play_xpath = //*[@class="el-icon-arrow-left"]
 logout_xpath = //*[@class="personal-text"]
 
 [homepage]
+# 分别是切换显示屏的按钮、选择显示屏按钮和确认按钮
 change_screen_xpath = //*[@class="el-dropdown-link el-dropdown-selfdefine"]
 select_screen_xpath = //*/li[contains(text(), "宝安中心大屏")]
 select_screen_confirm_xpath = //*/span[contains(text(), "确定")]
+# 分别是播放文稿列表定位和启动播放按钮定位
 nav_content_xpath = //*[@class="nav-ct"]
 start_xpath = //*[@class="start"]
+# 分别是上一页和下一页播放按钮定位
 pre_xpath = //*[@class="pre"]
 next_xpath = //*[@class="next"]
+# 分别是文稿播放列表的所以列表项、预览图和播放列表项的所有项的定位
 pre_next_text_xpath = //*[@class="text"]
 preview_xpath = //*[@class="img"]/img
 nav_list_ct_xpath = //*[@class="name"]
+# 分别是文稿预览和文稿播放元素定位
 start_title_xpath = //*/span[contains(text(), "文稿预览")]
 play_title_xpath = //*/span[contains(text(), "文稿播放")]
